Some more renaming and a few fixes.

--- a/Example/Source/Info.plist
+++ b/Example/Source/Info.plist
@@ -21,7 +21,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string></string>
+	<string>To show you amazing AR!</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>To capture your amazing voice!</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
